# fpex-eval

./: .gitignore  README.md  Roadmap.md  cabal.project  fpex.cabal  hie.yaml  package.yaml  shell.nix  stack.yaml
.github/workflows/: haskell.yml
app/: Main.hs
docs/: file-structure.md
fpex-test-spec/: TestSpec.hs  fpex-test-spec.cabal
src/: FpexEvalMain.hs  FpexEvalOptions.hs  Report.hs
src/Fpex/: Collect.hs  EdslGrade.hs  EvalMain.hs  EvalOptions.hs  Feedback.hs  Grade.hs  Main.hs  Options.hs  Pretty.hs  Publish.hs  Reporter.hs  Summary.hs  Types.hs
src/Fpex/Course/: CourseSetup.hs  DirSetup.hs  Student.hs  Types.hs
src/Fpex/Eval/: Effect.hs  Main.hs  Options.hs  Pretty.hs  Summary.hs  Types.hs
src/Fpex/Grade/: Analysis.hs  ErrorStudent.hs  Paths.hs  Result.hs  Storage.hs  Tasty.hs  Types.hs
src/Fpex/Log/: Effect.hs
src/Fpex/Mail/: Effect.hs  Simple.hs  Template.hs  Types.hs
src/Fpex/Parse/: Input.hs
src/Fpex/Publish/: Markdown.hs  Plain.hs  Pretty.hs  Stats.hs  Types.hs
src/Fpex/Stats/: Csv.hs  Grade.hs  Histogram.hs
src/Fpex/User/: Effect.hs  Simple.hs  Types.hs
test-nursery/: Assignment0.hs  Assignment1.hs  Assignment3.hs  Assignment4.hs  Assignment5.hs  Assignment6.hs  Assignment7.hs  TestSuite0.hs  TestSuite1.hs  TestSuite2.hs  TestSuite3.hs  TestSuite4.hs  TestSuite5.hs  TestSuite6.hs  TestSuite7.hs  test-nursery.cabal
testdata/: Assignment1.hs  course1.json  course2.json  course3.json  courseEmpty.json  simpletest.tex  student-1000000.hs  testsuite-fib.json  ws19_fp_ueb01_testfaelle.tex  ws19_fp_ueb02_testfaelle.tex
testdata/course1/5667778/: Assignment1.hs
testdata/course1/admin/: TestSuite1.hs
testdata/course1/admin/Assignment1-1/1234567/: Assignment1.hs
testdata/course1/admin/Assignment1-1/1527809/: testsuite-result.json
testdata/course1/admin/Assignment1-1/4443333/: Assignment1.hs  testsuite-result.json
testdata/course1/admin/Assignment1-1/5667778/: testsuite-result.json
testdata/course1/admin/Assignment1-1/7777777/: Assignment1.hs  testsuite-result.json
testdata/course1/admin/Assignment1-1/9999999/: Assignment1.hs  testsuite-result.json
testdata/course1/admin/Assignment1-1/errorStudent/: testsuite-result.json
testdata/course1/admin/assignment1/: 1113330.hs_out1  1234567.hs_out1  1711000.hs_out1  1831000.hs  1831000.hs_out1
testdata/course1/admin/assignment1-1/: 1234567.hs  1711000.hs
testdata/course1/c1-1113330/: assignment1.hs
testdata/course2/admin/assignment1/: 1000000.hs_out1  1234567.hs_out1
testdata/course2/admin/assignment1-1/: 1000000.hs
testdata/course4/admin/: Assignment1.hs  TestSpec.hs  TestSpecLib.hs  course.json
testdata/course4/admin/Assignment1-1/: Main.hs  TestSpec.hs
testdata/course4/admin/Assignment1-1/01234567/: Assignment1.hs  report.json
testdata/course4/admin/Assignment1-1/10000000/: Assignment1.hs  assignment.cabal  package.yaml  report.json  results.out
testdata/course4/admin/Assignment1-1/11133300/: Assignment1.hs  assignment.cabal  report.json  results.out
testdata/course4/admin/Assignment1-1/33333333/: report.json
testdata/course4/admin/Assignment1-1/77777777/: Assignment1.hs  report.json
testdata/course4/admin/Assignment1-1/errorStudent/: Assignment1.hs  report.json
testdata/course4/admin/fpex-test-spec/: TestSpec.hs
testdata/course4/admin/project-template/: cabal.project
testdata/course4/f01234567/: Assignment1.hs.out_1
testdata/course4/f10000000/: Assignment1.hs._out_1  Assignment1.hs.out_1
testdata/course4/f11133300/: Assignment1.hs._out_1  Assignment1.hs.out_1
testdata/course4/f65432123/: Assignment1.hs
testdata/course4/f77777777/: Assignment1.hs.out_1
testdata/environment/: cabal.project  environment.cabal
testdata/goldenReport/: basic.golden  only-errors.golden  overflow.golden  timeout.golden
testdata/goldenReport/input/: basic.json  only-errors.json  overflow.json  timeout.json
testdata/goldenResultParser/: basic.json.golden  not-submitted.json.golden  only-errors.json.golden  overflow.json.golden
testdata/goldenResultParser/input/: basic.json  not-submitted.json  only-errors.json
tests/: Analyser.hs  Course.hs  Eval.hs  Experiments.hs  GradeResultParser.hs  Main.hs  Parser.hs  Report.hs  TestSpecLib.hs
tests-integration/: Main.hs
util/: DumpTestSpecification.hs
