cabal-version:      2.2
name:               fpex
version:            0.0.0
build-type:         Simple
extra-source-files:
  README.md
  stack.yaml

common exts
  default-extensions:
    BangPatterns
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    LambdaCase
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    PatternGuards
    PolyKinds
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

library
  import:           exts
  exposed-modules:
    Fpex.Collect
    Fpex.Course.CourseSetup
    Fpex.Course.Types
    Fpex.Course.Student
    Fpex.Grade
    Fpex.Grade.Analysis
    Fpex.Grade.ErrorStudent
    Fpex.Grade.Storage
    Fpex.Grade.Tasty
    Fpex.Grade.Paths
    Fpex.Grade.Types
    Fpex.Grade.Result
    Fpex.Main
    Fpex.Options
    Fpex.Feedback
    Fpex.Publish.Plain
    Fpex.Publish.Stats
    Fpex.Reporter
    Fpex.Stats.Csv
    Fpex.Stats.Grade
    Fpex.Stats.Histogram

  other-modules:    Paths_fpex
  hs-source-dirs:   src
  ghc-options:
    -Wall -O2 -flate-specialise -fspecialise-aggressively
    -fplugin=Polysemy.Plugin

  build-depends:
    , aeson
    , aeson-combinators
    , aeson-pretty
    , array
    , base
    , bytestring
    , clock
    , co-log
    , co-log-polysemy
    , colourista
    , containers
    , deepseq
    , directory
    , extra
    , filepath
    , optparse-applicative
    , polysemy
    , polysemy-plugin
    , regex-tdfa
    , regex
    , safe-exceptions
    , semigroups
    , temporary
    , text
    , typed-process
    , unix-compat
    , unordered-containers

  default-language: Haskell2010

executable fpex
  import:           exts
  main-is:          Main.hs
  other-modules:    Paths_fpex
  hs-source-dirs:   app
  ghc-options:      -Wall -rtsopts -threaded -with-rtsopts=-N
  build-depends:
    , base
    , fpex
    , with-utf8

  default-language: Haskell2010

test-suite fpex-test
  import:           exts
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:    Paths_fpex
  hs-source-dirs:   tests
  ghc-options:
    -Wall -rtsopts -threaded -with-rtsopts=-N -fplugin=Polysemy.Plugin

  build-depends:
    , aeson
    , base
    , fpex
    , HUnit
    , polysemy
    , polysemy-plugin
    , tasty
    , tasty-hspec
    , text

  default-language: Haskell2010
