cabal-version:      2.2
name:               fpex
version:            0.0.0
build-type:         Simple
extra-source-files:
  README.md
  stack.yaml

common exts
  default-extensions:
    BangPatterns
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    LambdaCase
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    PatternGuards
    PolyKinds
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

library
  import:           exts
  exposed-modules:
    Fpex.Collect
    Fpex.Course.CourseSetup
    Fpex.Course.Student
    Fpex.Course.Types
    Fpex.Feedback
    Fpex.Grade
    Fpex.Grade.Analysis
    Fpex.Grade.ErrorStudent
    Fpex.Grade.Paths
    Fpex.Grade.Result
    Fpex.Grade.Storage
    Fpex.Grade.Tasty
    Fpex.Grade.Types
    Fpex.Main
    Fpex.Options
    Fpex.Publish.Plain
    Fpex.Publish.Stats
    Fpex.Reporter
    Fpex.Stats.Csv
    Fpex.Stats.Grade

  other-modules:    Paths_fpex
  hs-source-dirs:   src
  ghc-options:
    -Wall -O2
    -fplugin=Polysemy.Plugin

  build-depends:
    , aeson
    , aeson-combinators
    , aeson-pretty
    , array
    , base
    , bytestring
    , clock
    , co-log
    , co-log-polysemy
    , colourista
    , containers
    , deepseq
    , directory
    , extra
    , filepath
    , optparse-applicative
    , polysemy ^>= 1.5.0.0
    , polysemy-plugin  ^>= 0.3
    , regex
    , regex-tdfa
    , safe-exceptions
    , semigroups
    , text
    , typed-process
    , unix-compat
    , unordered-containers

  default-language: Haskell2010

executable fpex
  import:           exts
  main-is:          Main.hs
  other-modules:    Paths_fpex
  hs-source-dirs:   app
  ghc-options:      -Wall -rtsopts -threaded -with-rtsopts=-N
  build-depends:
    , base
    , fpex
    , with-utf8

  default-language: Haskell2010

test-suite fpex-unit-test
  import:           exts
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
    GradeResultParser
    Report
    Paths_fpex

  hs-source-dirs:   tests
  ghc-options:
    -Wall -rtsopts -threaded -with-rtsopts=-N -fplugin=Polysemy.Plugin

  build-depends:
    , aeson
    , aeson-pretty
    , base
    , bytestring
    , directory
    , filepath
    , fpex
    , polysemy
    , polysemy-plugin
    , tasty
    , tasty-golden
    , tasty-hunit
    , text

  default-language: Haskell2010


test-suite fpex-integration-test
  import:           exts
  type:             exitcode-stdio-1.0
  build-tool-depends: fpex:fpex
  main-is:          Main.hs

  hs-source-dirs:   tests-integration
  ghc-options:
    -Wall -rtsopts -threaded -with-rtsopts=-N -fplugin=Polysemy.Plugin

  build-depends:
    , aeson
    , aeson-pretty
    , base
    , bytestring
    , directory
    , filepath
    , process
    , fpex
    , polysemy
    , polysemy-plugin
    , hspec
    , temporary
    , text

  default-language: Haskell2010

