cabal-version:      2.2
name:               fpex
version:            0.0.0
build-type:         Simple
extra-source-files:
  README.md
  stack.yaml

common exts
  default-extensions:
    BangPatterns
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    LambdaCase
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    PatternGuards
    PolyKinds
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

library
  import:           exts
  exposed-modules:
    Fpex.Collect
    Fpex.Course.CourseSetup
    Fpex.Course.Student
    Fpex.Course.Types
    Fpex.Feedback
    Fpex.Grade
    Fpex.Grade.Analysis
    Fpex.Grade.ErrorStudent
    Fpex.Grade.Paths
    Fpex.Grade.Result
    Fpex.Grade.Storage
    Fpex.Grade.Tasty
    Fpex.Grade.Types
    Fpex.Main
    Fpex.Options
    Fpex.Publish.Plain
    Fpex.Publish.Stats
    Fpex.Reporter
    Fpex.Stats.Csv
    Fpex.Stats.Grade

  other-modules:    Paths_fpex
  hs-source-dirs:   src
  ghc-options:      -Wall -fplugin=Polysemy.Plugin
  build-depends:
    , aeson                 <2
    , aeson-combinators     ^>=0.0.5.0
    , aeson-pretty          ^>=0.8.9
    , array
    , base                  >=4.14.0.0 && <4.17.0.0
    , bytestring
    , clock
    , co-log
    , co-log-polysemy
    , colourista
    , containers
    , deepseq
    , directory
    , extra
    , filepath
    , optparse-applicative
    , polysemy              ^>=1.7.0.1
    , polysemy-plugin       ^>=0.4
    , regex
    , regex-tdfa
    , safe-exceptions
    , semigroups
    , text
    , typed-process
    , unix-compat
    , unordered-containers

  default-language: Haskell2010

executable fpex
  import:           exts
  main-is:          Main.hs
  other-modules:    Paths_fpex
  hs-source-dirs:   app
  ghc-options:      -Wall -rtsopts -threaded -with-rtsopts=-N
  build-depends:
    , base
    , fpex
    , with-utf8

  default-language: Haskell2010

test-suite fpex-unit-test
  import:           exts
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
    Analyser
    GradeResultParser
    Paths_fpex
    Report

  hs-source-dirs:   tests
  ghc-options:
    -Wall -rtsopts -threaded -with-rtsopts=-N -fplugin=Polysemy.Plugin

  build-depends:
    , aeson
    , aeson-pretty
    , base
    , bytestring
    , containers
    , directory
    , filepath
    , fpex
    , polysemy
    , polysemy-plugin
    , tasty
    , tasty-golden
    , tasty-hunit
    , text

  default-language: Haskell2010

test-suite fpex-integration-test
  import:             exts
  type:               exitcode-stdio-1.0
  build-tool-depends: fpex:fpex -any
  main-is:            Main.hs
  hs-source-dirs:     tests-integration
  ghc-options:
    -Wall -rtsopts -threaded -with-rtsopts=-N -fplugin=Polysemy.Plugin

  build-depends:
    , aeson
    , aeson-pretty
    , base
    , bytestring
    , directory
    , filepath
    , fpex
    , hspec
    , polysemy
    , polysemy-plugin
    , strip-ansi-escape
    , temporary
    , text
    , typed-process

  default-language:   Haskell2010
