name:          fpex-test-spec
version:       0.0.0
build-type:    Simple
cabal-version: 2

library
  exposed-modules:  TestSpec
  hs-source-dirs:   .
  build-depends:
      aeson
    , aeson-pretty
    , base
    , bytestring
    , deepseq
    , template-haskell
    , uniplate
    , clock

  default-language: Haskell2010
