cabal-version: 2.2
name:          fpex-test-spec
version:       0.0.0
build-type:    Simple

library
  exposed-modules:  TestSpec
  hs-source-dirs:   .
  build-depends:
    , aeson
    , base
    , bytestring
    , clock
    , deepseq
    , pretty
    , template-haskell
    , uniplate

  default-language: Haskell2010
