cabal-version: 2.2
name:          test-nursery
version:       0.0.0
build-type:    Simple

library
  exposed-modules:
    Assignment0
    Assignment1
    Assignment2
    Assignment3

  hs-source-dirs:   .
  build-depends:
    , array
    , base
    , fpex-test-spec

  default-language: Haskell2010

executable ass0
  main-is:          TestSuite0.hs
  build-depends:
    , base
    , fpex-test-spec
    , test-nursery

  default-language: Haskell2010

executable ass1
  main-is:          TestSuite1.hs
  build-depends:
    , base
    , fpex-test-spec
    , test-nursery

  default-language: Haskell2010

executable ass2
  main-is:          TestSuite2.hs
  build-depends:
    , array
    , base
    , fpex-test-spec
    , test-nursery

  default-language: Haskell2010

executable ass3
  main-is:          TestSuite3.hs
  build-depends:
    , array
    , base
    , fpex-test-spec
    , test-nursery

  default-language: Haskell2010
