cabal-version: 2.2
name:          test-nursery
version:       0.0.0
build-type:    Simple

common warnings
  ghc-options: -Wall

library
  import: warnings
  exposed-modules:
    Assignment0
    Assignment1
    Assignment2
    Assignment3
    Assignment4
    Assignment5

  hs-source-dirs:   .
  build-depends:
    , array
    , base
    , QuickCheck
    , fpex-test-spec

  default-language: Haskell2010

executable ass0
  import: warnings
  main-is:          TestSuite0.hs
  build-depends:
    , base
    , fpex-test-spec
    , test-nursery

  default-language: Haskell2010

executable ass1
  import: warnings
  main-is:          TestSuite1.hs
  build-depends:
    , base
    , fpex-test-spec
    , test-nursery

  default-language: Haskell2010

executable ass2
  import: warnings
  main-is:          TestSuite2.hs
  build-depends:
    , array
    , base
    , fpex-test-spec
    , test-nursery

  default-language: Haskell2010

executable ass3
  import: warnings
  main-is:          TestSuite3.hs
  ghc-options: -fdefer-type-errors
  build-depends:
    , array
    , base
    , fpex-test-spec
    , test-nursery

  default-language: Haskell2010

executable ass4
  import: warnings
  main-is:          TestSuite4.hs
  build-depends:
    , array
    , base
    , fpex-test-spec
    , test-nursery

  default-language: Haskell2010

executable ass5
  import: warnings
  ghc-options: -fdefer-type-errors
  main-is:          TestSuite5.hs
  build-depends:
    , QuickCheck
    , base
    , fpex-test-spec
    , test-nursery

  default-language: Haskell2010
