name:           assignment
version:        0.0.0
build-type:     Simple
cabal-version: 2

executable assignment
  main-is: ../Main.hs
  other-modules:
      -- TODO: this is hardcoded....
      Assignment1
  hs-source-dirs:
      .
  build-depends:
      base, HUnit, fpex-test-spec
  default-language: Haskell2010
